# 5cw-parser-vacancies

./: README.md  pyproject.toml
src/: api_hh.py  config.py  create_db.sql  create_db_script.py  create_db_tables.sql  db_manager.py  main.py
